ID: DE4034 - Contact Us/Customer Service - logged out - remove back button icon for logged out state, and address needs zip code change ID: US5979 - Android: Provide Feedback ID: US5985 - Android: Privacy Policy/Privacy & Terms Updates
Tested:
Verified can navigate to Provide Feedback from Account Summary Page
Verified can navigate to Privacy & Terms from Account Summary Page
Verified can navigate to Privacy & Terms from Transaction Details
Verified can navigate to Privacy & Terms from Open Account View
Verified can navigate to Privacy & Terms from BankDepositForbidden
BankDepositNotEligibleFragment
Verified can navigate to Privacy & Terms from CheckDepositErrorFragment
Verified can navigate to Privacy & Terms from DuplicateCheckErrorFragment
Verified can navigate to Privacy & Terms from Transfer Money
Verified can open Privacy & Terms and Provided Feedback from BankPayConfirmFragment
Verified can navigate to Privacy & Terms from BankPayeeNotEligibleFragment
Verified can open Privacy & Terms from BankSelectPayee
Verified can open Privacy & Terms from  PaymentDetailFragment
Verified can open Privacy & Terms  from SchedulePaymentFragment
Verified can navigate to Privacy & Terms from Load More footer w/ Privacy & Terms + Back to Top
Verified can open Privacy & Terms from BankManagePayee
Verified can open Privacy & Terms and Provide Feedback from BankAddPayeeConfirmFragment
Verified can open Privacy & Terms from BankAddUnmanagedPayeeFragment
Verified can open Privacy & Terms from BankAddPayeeFragment
Verified can open Privacy & Terms from BankEnterPayeeFragment
Verified can open Privacy & Terms from BankPayeeNotEligibleFragment
Verified can open Privacy & Terms from BankSearchSelectPayeeFragment
Verified can open Privacy & Terms from PayeeDetailFragment
Verified can open Privacy & Terms from Search a Location
Verified can open Privacy & Terms from Contact Us
Verified can open Privacy & Terms from Frequently Asked Questions Landing Page
Verified can navigate to Privacy &

--- a/Discover-Bank-Phone/res/layout/bank_enter_payee.xml
+++ b/Discover-Bank-Phone/res/layout/bank_enter_payee.xml
@@ -73,6 +73,13 @@
 	         android:drawablePadding="@dimen/between_related_elements_padding"
 	         android:text="@string/continue_text" />
 	    
+	    <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+            android:id="@+id/bank_footer"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/continue_button" 
+            style="@style/bank_layout_footer_style"/>
+	    
 	    <com.discover.mobile.common.help.HelpWidget
             android:id="@+id/help"
             android:layout_width="match_parent"
