--- a/Discover-Bank-Phone/res/layout/payee_no_eligible.xml
+++ b/Discover-Bank-Phone/res/layout/payee_no_eligible.xml
@@ -152,6 +152,13 @@
             android:layout_gravity="center"
             android:text="@string/bank_open_account" />
         
+         <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+            android:id="@+id/bank_footer"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/openAccount" 
+            style="@style/bank_layout_footer_style"/>
+         
          <com.discover.mobile.common.help.HelpWidget
             android:id="@+id/help"
             android:layout_width="match_parent"
