--- a/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto/com.discover.mobile.bank"
     style="@style/default_background"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,7 +14,8 @@
         android:paddingLeft="@dimen/forms_inner_padding"
         android:paddingRight="@dimen/forms_inner_padding" >
 
-        <LinearLayout
+        <LinearLayout 
+       	    android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
@@ -48,27 +51,6 @@
                 android:drawableRight="@drawable/external_link_icon"
                 android:text="@string/bank_open_new_account" />
 
-            <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/modal_footer_topmargin" >
-
-                <include
-                    android:id="@+id/need_help_footer"
-                    layout="@layout/old_general_need_help_footer" />
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/provide_feedback_button"
-                style="@style/bank_blue_hyperlink_small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/between_related_elements_padding"
-                android:layout_marginTop="@dimen/orange_button_margin_top"
-                android:layout_weight="0.0625"
-                android:gravity="bottom"
-                android:singleLine="true"
-                android:text="@string/feedback_text" />
         </LinearLayout>
 
         <com.discover.mobile.common.help.HelpWidget
@@ -81,6 +63,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/status_bar"/>
+             
+        <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+            android:id="@+id/bank_footer"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/content" 
+            style="@style/bank_layout_footer_style"
+            custom:footerType="3"/>
       
     </RelativeLayout>
 
