--- a/Discover-Bank-Phone/res/layout/bank_deposit_forbidden.xml
+++ b/Discover-Bank-Phone/res/layout/bank_deposit_forbidden.xml
@@ -27,24 +27,12 @@
         android:layout_marginBottom="@dimen/groups_of_elements_padding"
         android:text="@string/bank_deposit_forbidden_message" />
 
-    <LinearLayout
-        android:id="@+id/footer_layout"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/top_note_text"
-        android:layout_centerHorizontal="true"
-        android:layout_marginRight="@dimen/forms_inner_padding"
-        android:layout_marginTop="@dimen/modal_footer_topmargin"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/between_related_elements_padding" >
-
-        <include
-            android:id="@+id/need_help_footer"
-            layout="@layout/old_general_need_help_footer" />
-    </LinearLayout>
+     <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+            android:id="@+id/bank_footer"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/top_note_text" 
+            style="@style/bank_layout_footer_style"/>
 
     <com.discover.mobile.common.help.HelpWidget
         android:id="@+id/help"
