--- a/Discover-Bank-Phone/res/layout/bank_deposit_not_eligible.xml
+++ b/Discover-Bank-Phone/res/layout/bank_deposit_not_eligible.xml
@@ -49,24 +49,12 @@
             android:drawableRight="@drawable/external_link_icon"
             android:text="@string/bank_open_account" />
 
-        <LinearLayout
-            android:id="@+id/footer_layout"
+        <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+            android:id="@+id/bank_footer"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@+id/openAccount"
-            android:layout_centerHorizontal="true"
-            android:layout_marginRight="@dimen/forms_inner_padding"
-            android:layout_marginTop="@dimen/modal_footer_topmargin"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/between_related_elements_padding" >
-
-            <include
-                android:id="@+id/need_help_footer"
-                layout="@layout/old_general_need_help_footer" />
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/openAccount" 
+            style="@style/bank_layout_footer_style"/>
 
         <com.discover.mobile.common.help.HelpWidget
             android:id="@+id/help"
