--- a/Discover-Bank-Phone/res/layout/bank_message_fragment_layout.xml
+++ b/Discover-Bank-Phone/res/layout/bank_message_fragment_layout.xml
@@ -58,25 +58,13 @@
 		            android:layout_gravity="center"
 		            android:text="@string/bank_open_account" />
 		    
-		    <LinearLayout
-		        android:id="@+id/footer_layout"
-		        android:layout_width="fill_parent"
-		        android:layout_height="fill_parent"
-		        android:layout_alignParentBottom="true"
-		        android:layout_below="@+id/action_button"
-		        android:layout_centerHorizontal="true"
-		        android:layout_marginTop="@dimen/modal_footer_topmargin"
-		        android:layout_marginRight="@dimen/forms_inner_padding"
-		        android:focusable="true"
-		        android:focusableInTouchMode="true"
-		        android:orientation="vertical"
-		        android:paddingBottom="@dimen/between_related_elements_padding" >
-		
-		        <include
-		            android:id="@+id/need_help_footer"
-		            layout="@layout/old_general_need_help_footer" />
-		
-		    </LinearLayout>	
+		    <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+	            android:id="@+id/bank_footer"
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_below="@+id/action_button" 
+	            style="@style/bank_layout_footer_style"/>
+
 		    
 		     <com.discover.mobile.common.help.HelpWidget
 		        android:id="@+id/help"
