--- a/Discover-Bank-Phone/res/layout/customer_service.xml
+++ b/Discover-Bank-Phone/res/layout/customer_service.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto/com.discover.mobile.bank"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/light_gray_bkgrd" >
@@ -98,25 +99,13 @@
             android:layout_below="@+id/bank_mail_title_label" >
         </LinearLayout>
 
-        <TextView
-           android:id="@+id/provide_feedback_button"
-           style="@style/bank_blue_hyperlink_small"
-           android:layout_below="@+id/bank_mail_address_list"
-           android:layout_width="fill_parent"
-           android:layout_height="wrap_content"
-           android:layout_marginTop="@dimen/orange_button_margin_top"
-           android:gravity="center_horizontal|bottom"
-           android:text="@string/feedback_text" />
-
-        <TextView
-            android:id="@+id/discover_copyright"
-            style="@style/sub_copy_small"
-            android:layout_width="wrap_content"
+        <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+            android:id="@+id/bank_footer"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/provide_feedback_button"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/orange_button_margin_top"
-            android:text="@string/discover_copyright_text" />
+            android:layout_below="@+id/bank_mail_address_list" 
+            custom:footerType="9"
+            style="@style/bank_layout_footer_style"/>
         
          <com.discover.mobile.common.help.HelpWidget
             android:id="@+id/help"
