--- a/Discover-Bank-Phone/res/layout/faq_detail_fragment.xml
+++ b/Discover-Bank-Phone/res/layout/faq_detail_fragment.xml
@@ -5,29 +5,41 @@
     android:background="@drawable/light_gray_bkgrd"
     android:paddingLeft="@dimen/forms_inner_padding" >
 
-    <LinearLayout
+    <RelativeLayout 
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/forms_inner_padding" >
-
-        <TextView
-            android:id="@+id/title"
-            style="@style/title_copy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/forms_inner_padding"
-            android:text="@string/edit" />
-
-        <LinearLayout
-            android:id="@+id/content_table"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/forms_inner_padding"
-            android:background="@drawable/rounded_table_corners_no_padding"
-            android:orientation="vertical"
-            android:padding="1dp" >
-        </LinearLayout>
-    </LinearLayout>
-
+        android:layout_height="wrap_content">
+        
+	    <LinearLayout
+	        android:id="@+id/content"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:orientation="vertical"
+	        android:paddingBottom="@dimen/forms_inner_padding" >
+	
+	        <TextView
+	            android:id="@+id/title"
+	            style="@style/title_copy"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:padding="@dimen/forms_inner_padding"
+	            android:text="@string/edit" />
+	
+	        <LinearLayout
+	            android:id="@+id/content_table"
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginRight="@dimen/forms_inner_padding"
+	            android:background="@drawable/rounded_table_corners_no_padding"
+	            android:orientation="vertical"
+	            android:padding="1dp" >
+	        </LinearLayout>
+	    </LinearLayout>
+	    
+	     <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+	        android:id="@+id/bank_footer"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@+id/content" 
+	        style="@style/bank_layout_footer_style"/>
+	</RelativeLayout>
 </ScrollView>
