--- a/Discover-Bank-Phone/res/layout/faq_landing_page.xml
+++ b/Discover-Bank-Phone/res/layout/faq_landing_page.xml
@@ -15,4 +15,10 @@
         >
     </ListView>
 
+     <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+        android:id="@+id/bank_footer"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@android:id/list"
+        style="@style/bank_layout_footer_style"/>
 </RelativeLayout>
