--- a/Discover-Bank-Phone/res/layout/payee_detail.xml
+++ b/Discover-Bank-Phone/res/layout/payee_detail.xml
@@ -34,11 +34,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/edit_payee_button" 
-            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:background="@null"
             android:text="@string/bank_payee_action_delete" >
         </Button>
+        
+         <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+            android:id="@+id/bank_footer"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/delete_payee_button" 
+            style="@style/bank_layout_footer_style"/>
     </RelativeLayout>
 
 </ScrollView>
