--- a/Discover-Bank-Phone/res/layout/transaction_detail.xml
+++ b/Discover-Bank-Phone/res/layout/transaction_detail.xml
@@ -134,6 +134,13 @@
                     android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
+        
+       <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+         android:id="@+id/bank_footer"
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content"
+         android:layout_below="@+id/content_table" 
+         style="@style/bank_layout_footer_style"/>
     </RelativeLayout>
 
 </ScrollView>
