--- a/Discover-Commons/res/layout/navigation_footer.xml
+++ b/Discover-Commons/res/layout/navigation_footer.xml
@@ -22,7 +22,6 @@
             android:id="@+id/navigation_divider"
             android:layout_width="@dimen/nav_footer_divider_width"
             android:layout_height="@dimen/nav_footer_divider_height"
-            android:layout_toRightOf="@+id/navigation_version"
             android:background="@color/gray" />
 
         <TextView
@@ -30,7 +29,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/nav_footer_font_size"
-            android:layout_toRightOf="@+id/navigation_divider"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"
             android:paddingLeft="@dimen/nav_footer_padding"
             android:text="@string/privacy_terms" />
     </LinearLayout>
