ID: DE4091 - Transfers - Cosmetic Issue in Not Eligible Transfer Page ID: DE4093 - Transfer - Does not navigate to Transfer Not Eligible
Tested:
Verified can navigate to Privacy & Terms from Transfers Not Eligible Page
Verified can navigate to Transfer Not Eligible when user is not eligible for Transfers
Verified layout matches comps for Transfers Not Eligible

--- a/Discover-Bank-Phone/res/layout/bank_frequency_widget.xml
+++ b/Discover-Bank-Phone/res/layout/bank_frequency_widget.xml
@@ -42,6 +42,13 @@
             android:id="@+id/help"
             android:layout_width="match_parent"
             android:layout_height="@dimen/help_bar_height_two_items" />
+        
+         <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+            android:id="@+id/bank_footer"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/list" 
+            style="@style/bank_layout_footer_style"/>
     </RelativeLayout>
 
 </ScrollView>
