US5381, US5713, US5707 - Removed Edit payee and edit payment button

--- a/Discover-Bank-Phone/res/layout/payee_detail.xml
+++ b/Discover-Bank-Phone/res/layout/payee_detail.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/content_table"
             android:layout_centerHorizontal="true"
+            android:visibility="gone"
             android:layout_marginTop="@dimen/groups_of_elements_padding"
             android:text="@string/bank_payee_action_edit" >
         </Button>
