US7395 - Scheduled Details Updates : TA15186 - Integrte View Pager. The view pager has been updated to support paging through different types of transactions. A user is able to page through a scheduled payment, transfer, recurring transfer, or deposit. TA15187 - Load More. If a user pages past their last transaction, they will see a loading page that initiates a load more call to load more information into the table. When it completes the view pager is updated with the new information.

--- a/Discover-Bank-Phone/res/values/strings_detail_transactions.xml
+++ b/Discover-Bank-Phone/res/values/strings_detail_transactions.xml
@@ -41,5 +41,6 @@
     <string name="address">Address</string>
     <string name="payee_details">Payee Details</string>
     <string name="payee_memo">Account #/Memo (Optional)</string>
+    <string name="duration">Duration</string>
     
 </resources>
