DE3894 - Fixed deposit amount cosmetic defect

--- a/Discover-Bank-Phone/res/layout/amount_list_item.xml
+++ b/Discover-Bank-Phone/res/layout/amount_list_item.xml
@@ -40,5 +40,5 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/amount_row"
         android:text="@string/bank_invalid_characters"
-        android:visibility="gone" />
+        android:visibility="invisible" />
 </RelativeLayout>
