--- a/Discover-Bank-Phone/res/layout/payment_terms_and_conditions.xml
+++ b/Discover-Bank-Phone/res/layout/payment_terms_and_conditions.xml
@@ -36,6 +36,7 @@
         android:visibility="invisible" />
 
     <View
+        android:id="@+id/footer_divider"
         android:layout_width="match_parent"
         android:layout_height="5dp" 
         android:background="@drawable/shadow_gradient"
