DE2363:  Changed the layout so that the orange carrot will not be shown by default.  It will only be shown when the user is an SSO user, but that will be handled in the SSO stories.

--- a/Discover-Bank-Phone/res/layout/status_bar.xml
+++ b/Discover-Bank-Phone/res/layout/status_bar.xml
@@ -37,7 +37,8 @@
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/cardBankIcon"
         android:paddingLeft="@dimen/nav_section_pading"
-        android:src="@drawable/orange_down_carrot" />
+        android:src="@drawable/orange_down_carrot"
+        android:visibility="invisible" />
      
      <ImageView
         android:id="@+id/bottom_line"
