ID: DE4173 - Terms of Use - CRASH and nav'd to BB ID: DE4172 - Privacy & Terms - CRASH and nav'd to BB ID: DE4175 - Add Unmanaged Payee - if name is too long, it goes behind 'enter payee details' cell ID: DE4180 - Name: Add Unmanaged Payee - cosmetic and inline issue ID: DE4034 - Contact Us/Customer Service - logged out - remove back button icon for logged out state, and address needs zip code change ID: DE4161 - Contact Us - Phone number should be taken out of FAQs in logged out state ID: DE4170 - Review Transfers - Links to wrong page
Tested:
- Verified search criteria in Select Payee when adding a payee wraps text when it is too long and formatted correctly
- Verified State in Add Unmanaged Payee does not show inline errors
- Verified help number not shown in FAQ help drop down when user is logged out
- Verified Review Transfers navigates user to the right link via the browser
- Verified phone number is removed from help menu drop down in Contact Us Page
- Verified back button is removed from action bar and zip code for personal loans matches Acceptance Criteria
- Attempted to crash application reproducing steps specified in defect.

--- a/Discover-Bank-Phone/res/layout/bank_select_search_payee.xml
+++ b/Discover-Bank-Phone/res/layout/bank_select_search_payee.xml
@@ -23,29 +23,19 @@
             android:text="@string/select_payee_title" />
 
         <TextView
-            android:id="@+id/matches"
-            style="@style/normal_static_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/select_payee_title"
-            android:layout_marginBottom="@dimen/forms_inner_padding"
-            android:text="@string/bank_matches_for" />
-
-        <TextView
             android:id="@+id/search_name"
-            style="@style/body_copy_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:singleLine="false"
             android:layout_below="@+id/select_payee_title"
             android:layout_marginBottom="@dimen/forms_inner_padding"
-            android:layout_toRightOf="@+id/matches"
             android:text="@string/bank_connie_smith" />
 
         <LinearLayout
             android:id="@+id/payee_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/matches"
+            android:layout_below="@+id/search_name"
             android:layout_marginBottom="@dimen/groups_of_elements_padding"
             android:orientation="vertical" />
 
