US7363 : TA14863 - Added client side error handling for the amount field and user accounts. Added client side validation to the duration value field. Fixed the cells in the table from having invisible error labels appear on navigation. Added a string formatter that converts a selected date to a formatted date that the server will understand. Added this formatting to the date selector for recurring transfers. Awaiting further information on exactly what should be done client side and what will be server side validation.

--- a/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
@@ -45,4 +45,7 @@
     
 	<string name="transfer_success_title">You have successfully scheduled this transfer</string>
 	
+	
+	<!-- Error Labels -->
+	<string name="amount_less_than_twenty_five">Too low (less than $25)</string>
 </resources>
