--- a/Discover-Bank-Phone/res/layout/bank_frequency_detail_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_frequency_detail_view.xml
@@ -138,7 +138,7 @@
             android:paddingBottom="@dimen/between_related_elements_padding"
             android:paddingRight="@dimen/between_related_elements_padding"
             android:scaleType="center"
-            android:src="@drawable/blue_arrow_right" />
+            android:src="@drawable/gray_right_arrow" />
     </LinearLayout>
     <!-- End date layout items -->
 
@@ -183,12 +183,13 @@
             android:text="@string/transfer_transactions"
             android:textColor="@color/field_copy" />
 
-        <com.discover.mobile.common.ui.widgets.SsnEditText
+        <com.discover.mobile.common.ui.widgets.PositiveIntegerEditText
             android:id="@+id/transaction_amount"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/forms_inner_padding"
             android:layout_weight="1.75"
+            android:imeOptions="actionDone"
             android:textCursorDrawable="@null" />
     </LinearLayout>
     <!-- End count items -->
@@ -249,7 +250,8 @@
             style="@style/pmt_amount_style"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.75" >
+            android:layout_weight="1.75" 
+            android:imeOptions="actionDone">
         </com.discover.mobile.bank.ui.widgets.AmountValidatedEditField>
     </LinearLayout>
 
