ID: US7881 - Android: Add Phone Numbers to Certain Modals ID: DE4199 - Update 500 Error Modal Text - some cosmetic issues. ID: DE4211 - Manage Payees - Unable to Add Manage Payee ID: DE4224 - Server Inline Errors not showing for Managed/Unmanaged Payee ID: DE4206 - Android: Contact Us/Customer Service - cosmetic issue and link needs to be added
Verified:
- verified catch all modal matches AC
- Verified capability of adding managed and unmanaged payee.
- Verified help number shown in catch all modal always
- Verified help number not shown when receiving an error message without any phone number.
- Verified help number shown when receiving an error message with a phone number, and the number displayed is that sent from server.
- Verified inline errors displayed for managed and unmanaged payees using mock service
- Verify By Mail and By Phone text style match in Contact Us Page
- Verify Provide Feedback  and Privacy and terms displayed in Contact Us Page.

--- a/Discover-Bank-Phone/res/layout/customer_service.xml
+++ b/Discover-Bank-Phone/res/layout/customer_service.xml
@@ -14,7 +14,7 @@
 
         <TextView
             android:id="@+id/phone_title_label"
-            style="@style/page_title"
+            style="@style/title_copy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/between_related_elements_padding"
@@ -104,7 +104,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/bank_mail_address_list" 
-            custom:footerType="9"
+            custom:footerType="11"
             style="@style/bank_layout_footer_style"/>
         
          <com.discover.mobile.common.help.HelpWidget
