--- a/Discover-Bank-Phone/res/layout/payment_detail.xml
+++ b/Discover-Bank-Phone/res/layout/payment_detail.xml
@@ -33,8 +33,7 @@
             style="@style/blue_hyperlink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@+id/edit_payment_button"
+            android:layout_below="@+id/content_table"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/groups_of_elements_padding"
             android:background="@null"
